--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             
            
         Если Вам необходима подробная информация о заказе торта, кап-кейков, муссовых десертов по всем вопросам <br><br>
-        <a href="tel:89122082332"><b>8-912-208-23-32</b></a><br><br>
+        <a href="https://izhnut.github.io/mobile/izhnut-ves"><b>8-912-208-23-32</b></a><br><br>
         Торты на заказ Екатеринбург<br>
         <br>
         Кондитерская Black.beerry в Екатеринбурге приготовит для Вас: <br>
