--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
     <meta charset="utf-8">
@@ -6,7 +7,7 @@
 
 
 
-<img src="candy.jpg" alt="animat" /><br><br>
+ <p> <img src="candy.jpg" alt="animat" width="100%" ></p>
 
 
    </html>
