--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -7,7 +7,7 @@
 
 
 
- <p> <img src="candy.jpg" alt="animat" width="100%" ></p>
+ <p> <img src="candy.jpg" alt="animat" width:auto /></p>
 
 
    </html>
