--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 12">
 <link rel=File-List href="izhnut-candy.files/filelist.xml">
-<style id="Лист Microsoft Office Excel_1203_Styles">
+<style id="Р›РёСЃС‚ Microsoft Office Excel_1203_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
@@ -892,15 +892,15 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <body>
 <!--[if !excel]>&nbsp;&nbsp;<![endif]-->
-<!--Следующие сведения были подготовлены мастером публикации веб-страниц
+<!--РЎР»РµРґСѓСЋС‰РёРµ СЃРІРµРґРµРЅРёСЏ Р±С‹Р»Рё РїРѕРґРіРѕС‚РѕРІР»РµРЅС‹ РјР°СЃС‚РµСЂРѕРј РїСѓР±Р»РёРєР°С†РёРё РІРµР±-СЃС‚СЂР°РЅРёС†
 Microsoft Office Excel.-->
-<!--При повторной публикации этого документа из Excel все сведения между тегами
-DIV будут заменены.-->
+<!--РџСЂРё РїРѕРІС‚РѕСЂРЅРѕР№ РїСѓР±Р»РёРєР°С†РёРё СЌС‚РѕРіРѕ РґРѕРєСѓРјРµРЅС‚Р° РёР· Excel РІСЃРµ СЃРІРµРґРµРЅРёСЏ РјРµР¶РґСѓ С‚РµРіР°РјРё
+DIV Р±СѓРґСѓС‚ Р·Р°РјРµРЅРµРЅС‹.-->
 <!----------------------------->
-<!--НАЧАЛО ФРАГМЕНТА ПУБЛИКАЦИИ МАСТЕРА ВЕБ-СТРАНИЦ EXCEL -->
+<!--РќРђР§РђР›Рћ Р¤Р РђР“РњР•РќРўРђ РџРЈР‘Р›РРљРђР¦РР РњРђРЎРўР•Р Рђ Р’Р•Р‘-РЎРўР РђРќРР¦ EXCEL -->
 <!----------------------------->
 
-<div id="Лист Microsoft Office Excel_1203" align=center x:publishsource="Excel">
+<div id="Р›РёСЃС‚ Microsoft Office Excel_1203" align=center x:publishsource="Excel">
 
 <table border=0 cellpadding=0 cellspacing=0 width=532 style='border-collapse:
  collapse;table-layout:fixed;width:400pt'>
@@ -909,11 +909,11 @@ DIV будут заменены.-->
  <col width=64 span=2 style='width:48pt'>
  <tr height=20 style='mso-height-source:userset;height:15.0pt'>
   <td colspan=2 rowspan=2 height=41 class=xl841203 width=404 style='border-bottom:
-  1.0pt solid black;height:30.75pt;width:304pt'>Цены действительны с 03.10.2018</td>
+  1.0pt solid black;height:30.75pt;width:304pt'>Р¦РµРЅС‹ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅС‹ СЃ 03.10.2018</td>
   <td class=xl861203 width=64 style='width:48pt'><u style='visibility:hidden;
   mso-ignore:visibility'>&nbsp;</u></td>
   <td rowspan=3 class=xl871203 width=64 style='border-bottom:1.0pt solid black;
-  width:48pt'>Цена за 1Кг.</td>
+  width:48pt'>Р¦РµРЅР° Р·Р° 1РљРі.</td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:15.75pt'>
   <td height=21 class=xl681203 width=64 style='height:15.75pt;width:48pt'><u
@@ -921,189 +921,189 @@ DIV будут заменены.-->
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 class=xl901203 width=50 style='height:15.75pt;border-top:none;
-  width:38pt'>№ п/п</td>
+  width:38pt'>в„– Рї/Рї</td>
   <td class=xl641203 width=354 style='border-top:none;border-left:none;
-  width:266pt'>Наименование</td>
+  width:266pt'>РќР°РёРјРµРЅРѕРІР°РЅРёРµ</td>
   <td class=xl641203 width=64 style='border-top:none;border-left:none;
-  width:48pt'>Ед. изм.</td>
+  width:48pt'>Р•Рґ. РёР·Рј.</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl921203 width=50 style='height:15.0pt;width:38pt'>1</td>
-  <td class=xl691203 width=354 style='width:266pt'>Ананас в белой шоколадной
-  глазури (БО)</td>
-  <td class=xl701203 width=64 style='width:48pt'>кг</td>
+  <td class=xl691203 width=354 style='width:266pt'>РђРЅР°РЅР°СЃ РІ Р±РµР»РѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№
+  РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl701203 width=64 style='width:48pt'>РєРі</td>
   <td class=xl931203 width=64 style='border-top:none;width:48pt'>470</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>2</td>
-  <td class=xl711203 width=354 style='width:266pt'>Арахис в темной шок.глазури
-  (Калуж.обл.)</td>
-  <td class=xl721203 width=64 style='width:48pt'>кг</td>
+  <td class=xl711203 width=354 style='width:266pt'>РђСЂР°С…РёСЃ РІ С‚РµРјРЅРѕР№ С€РѕРє.РіР»Р°Р·СѓСЂРё
+  (РљР°Р»СѓР¶.РѕР±Р».)</td>
+  <td class=xl721203 width=64 style='width:48pt'>РєРі</td>
   <td class=xl951203 width=64 style='width:48pt'>370</td>
  </tr>
  <tr height=34 style='height:25.5pt'>
   <td height=34 class=xl941203 width=50 style='height:25.5pt;border-top:none;
   width:38pt'>3</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Арбузная
-  корочка (цукат) в белой шоколадной глазури (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РђСЂР±СѓР·РЅР°СЏ
+  РєРѕСЂРѕС‡РєР° (С†СѓРєР°С‚) РІ Р±РµР»РѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>410</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>4</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Грецкие
-  орехи в шоколадной глазури (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Р“СЂРµС†РєРёРµ
+  РѕСЂРµС…Рё РІ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>630</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>5</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Инжир в
-  бел.,шок.глазури (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РРЅР¶РёСЂ РІ
+  Р±РµР».,С€РѕРє.РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>510</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>6</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Какао бобы в
-  бел.,шок.глазури</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РљР°РєР°Рѕ Р±РѕР±С‹ РІ
+  Р±РµР».,С€РѕРє.РіР»Р°Р·СѓСЂРё</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>550</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>7</td>
-  <td class=xl751203 width=354 style='border-top:none;width:266pt'>Кедровый
-  орех<span style='mso-spacerun:yes'>  </span>в белой шок.глазури (БО)</td>
-  <td class=xl761203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl751203 width=354 style='border-top:none;width:266pt'>РљРµРґСЂРѕРІС‹Р№
+  РѕСЂРµС…<span style='mso-spacerun:yes'>В  </span>РІ Р±РµР»РѕР№ С€РѕРє.РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl761203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl971203 width=64 style='border-top:none;width:48pt'>980</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>8</td>
-  <td class=xl751203 width=354 style='border-top:none;width:266pt'>Кешью в
-  молочой шоколадной глазури (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl751203 width=354 style='border-top:none;width:266pt'>РљРµС€СЊСЋ РІ
+  РјРѕР»РѕС‡РѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl971203 width=64 style='border-top:none;width:48pt'>710</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>9</td>
-  <td class=xl751203 width=354 style='border-top:none;width:266pt'>Кешью в
-  темной шоколадной глазури (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl751203 width=354 style='border-top:none;width:266pt'>РљРµС€СЊСЋ РІ
+  С‚РµРјРЅРѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl971203 width=64 style='border-top:none;width:48pt'>710</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 class=xl981203 width=50 style='height:15.75pt;border-top:none;
   width:38pt'>10</td>
-  <td class=xl771203 width=354 style='border-top:none;width:266pt'>Клубника в
-  бел.,шок.,глазури В ОБЕРТКЕ (БО)</td>
-  <td class=xl781203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl771203 width=354 style='border-top:none;width:266pt'>РљР»СѓР±РЅРёРєР° РІ
+  Р±РµР».,С€РѕРє.,РіР»Р°Р·СѓСЂРё Р’ РћР‘Р•Р РўРљР• (Р‘Рћ)</td>
+  <td class=xl781203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl991203 width=64 style='border-top:none;width:48pt'>510</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl921203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>11</td>
-  <td class=xl691203 width=354 style='border-top:none;width:266pt'>Клюква в
-  белой шоколадной глазури (БО)</td>
-  <td class=xl701203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl691203 width=354 style='border-top:none;width:266pt'>РљР»СЋРєРІР° РІ
+  Р±РµР»РѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl701203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl931203 width=64 style='border-top:none;width:48pt'>450</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>12</td>
-  <td class=xl751203 width=354 style='border-top:none;width:266pt'>Клюква в
-  темной шок., глазури (БО)</td>
-  <td class=xl761203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl751203 width=354 style='border-top:none;width:266pt'>РљР»СЋРєРІР° РІ
+  С‚РµРјРЅРѕР№ С€РѕРє., РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl761203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl971203 width=64 style='border-top:none;width:48pt'>570</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>13</td>
-  <td class=xl791203 width=354 style='border-top:none;width:266pt'>Кофейные
-  зерна в белом шоколаде (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl791203 width=354 style='border-top:none;width:266pt'>РљРѕС„РµР№РЅС‹Рµ
+  Р·РµСЂРЅР° РІ Р±РµР»РѕРј С€РѕРєРѕР»Р°РґРµ (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>980</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>14</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Курага в
-  шок.глазури (Калуж.обл.)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РљСѓСЂР°РіР° РІ
+  С€РѕРє.РіР»Р°Р·СѓСЂРё (РљР°Р»СѓР¶.РѕР±Р».)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>450</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>15</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Малина
-  (сублим.) в белой шоколадной глазури (БО)</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РњР°Р»РёРЅР°
+  (СЃСѓР±Р»РёРј.) РІ Р±РµР»РѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
   <td class=xl801203 width=64 style='border-top:none;border-left:none;
-  width:48pt'>кг</td>
+  width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;border-left:none;
   width:48pt'>510</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>16</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Миндаль в
-  шоколаде (Калуж.обл)</td>
-  <td class=xl651203 width=64 style='width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РњРёРЅРґР°Р»СЊ РІ
+  С€РѕРєРѕР»Р°РґРµ (РљР°Р»СѓР¶.РѕР±Р»)</td>
+  <td class=xl651203 width=64 style='width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>590</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>17</td>
-  <td class=xl731203 width=354 style='border-top:none;width:266pt'>Семечки в
-  цветной шок., глазури (БО)</td>
-  <td class=xl761203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl731203 width=354 style='border-top:none;width:266pt'>РЎРµРјРµС‡РєРё РІ
+  С†РІРµС‚РЅРѕР№ С€РѕРє., РіР»Р°Р·СѓСЂРё (Р‘Рћ)</td>
+  <td class=xl761203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>375</td>
  </tr>
  <tr height=68 style='height:51.0pt'>
   <td height=68 class=xl941203 width=50 style='height:51.0pt;border-top:none;
   width:38pt'>18</td>
-  <td class=xl661203 width=354 style='border-top:none;width:266pt'>Фруктово-ягодное
-  ассорти в белой, темной и цветной шоколадной глазури (Абрикос, ананас,
-  арбузная корочка, апельсиновая корочка, ежевика, клубника, клюква, малина,
-  манго, черника, финики, инжир, чернослив)</td>
-  <td class=xl671203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl661203 width=354 style='border-top:none;width:266pt'>Р¤СЂСѓРєС‚РѕРІРѕ-СЏРіРѕРґРЅРѕРµ
+  Р°СЃСЃРѕСЂС‚Рё РІ Р±РµР»РѕР№, С‚РµРјРЅРѕР№ Рё С†РІРµС‚РЅРѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё (РђР±СЂРёРєРѕСЃ, Р°РЅР°РЅР°СЃ,
+  Р°СЂР±СѓР·РЅР°СЏ РєРѕСЂРѕС‡РєР°, Р°РїРµР»СЊСЃРёРЅРѕРІР°СЏ РєРѕСЂРѕС‡РєР°, РµР¶РµРІРёРєР°, РєР»СѓР±РЅРёРєР°, РєР»СЋРєРІР°, РјР°Р»РёРЅР°,
+  РјР°РЅРіРѕ, С‡РµСЂРЅРёРєР°, С„РёРЅРёРєРё, РёРЅР¶РёСЂ, С‡РµСЂРЅРѕСЃР»РёРІ)</td>
+  <td class=xl671203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>560</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl941203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>19</td>
-  <td class=xl711203 width=354 style='width:266pt'>Фундук в шоколаде
-  (Калуж.обл)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl711203 width=354 style='width:266pt'>Р¤СѓРЅРґСѓРє РІ С€РѕРєРѕР»Р°РґРµ
+  (РљР°Р»СѓР¶.РѕР±Р»)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl951203 width=64 style='width:48pt'>590</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 class=xl981203 width=50 style='height:15.75pt;border-top:none;
   width:38pt'>20</td>
-  <td class=xl771203 width=354 style='border-top:none;width:266pt'>Чернослив в
-  белой шоколадной глазури В ОБЕРТКЕ (БО)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl771203 width=354 style='border-top:none;width:266pt'>Р§РµСЂРЅРѕСЃР»РёРІ РІ
+  Р±РµР»РѕР№ С€РѕРєРѕР»Р°РґРЅРѕР№ РіР»Р°Р·СѓСЂРё Р’ РћР‘Р•Р РўРљР• (Р‘Рћ)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl991203 width=64 style='border-top:none;width:48pt'>500</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl921203 width=50 style='height:15.0pt;border-top:none;
   width:38pt'>21</td>
-  <td class=xl811203 width=354 style='border-top:none;width:266pt'>Чернослив в
-  шок.глазури (Калуж.обл.)</td>
-  <td class=xl821203 width=64 style='width:48pt'>кг</td>
+  <td class=xl811203 width=354 style='border-top:none;width:266pt'>Р§РµСЂРЅРѕСЃР»РёРІ РІ
+  С€РѕРє.РіР»Р°Р·СѓСЂРё (РљР°Р»СѓР¶.РѕР±Р».)</td>
+  <td class=xl821203 width=64 style='width:48pt'>РєРі</td>
   <td class=xl1001203 width=64 style='border-top:none;width:48pt'>500</td>
  </tr>
  <tr height=34 style='height:25.5pt'>
   <td height=34 class=xl941203 width=50 style='height:25.5pt;border-top:none;
   width:38pt'>22</td>
-  <td class=xl661203 width=354 style='border-top:none;width:266pt'>Чернослив с
-  грецким орехом в темной шок., глазури (Колуж.обл.)</td>
-  <td class=xl741203 width=64 style='border-top:none;width:48pt'>кг</td>
+  <td class=xl661203 width=354 style='border-top:none;width:266pt'>Р§РµСЂРЅРѕСЃР»РёРІ СЃ
+  РіСЂРµС†РєРёРј РѕСЂРµС…РѕРј РІ С‚РµРјРЅРѕР№ С€РѕРє., РіР»Р°Р·СѓСЂРё (РљРѕР»СѓР¶.РѕР±Р».)</td>
+  <td class=xl741203 width=64 style='border-top:none;width:48pt'>РєРі</td>
   <td class=xl961203 width=64 style='border-top:none;width:48pt'>570</td>
  </tr>
  <![if supportMisalignedColumns]>
@@ -1120,7 +1120,7 @@ DIV будут заменены.-->
 
 
 <!----------------------------->
-<!--КОНЕЦ ФРАГМЕНТА ПУБЛИКАЦИИ МАСТЕРА ВЕБ-СТРАНИЦ EXCEL-->
+<!--РљРћРќР•Р¦ Р¤Р РђР“РњР•РќРўРђ РџРЈР‘Р›РРљРђР¦РР РњРђРЎРўР•Р Рђ Р’Р•Р‘-РЎРўР РђРќРР¦ EXCEL-->
 <!----------------------------->
 </body>
 
