--- a/izhnut-candy.htm
+++ b/izhnut-candy.htm
@@ -6,6 +6,10 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1251">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 12">
+	<meta name="HandheldFriendly" content="true" />
+<meta name="viewport"
+          content="width=device-width,
+                 height=device-height, user-scalable=no" />
 <link rel=File-List href="izhnut-candy.files/filelist.xml">
 <style id="Лист Microsoft Office Excel_1203_Styles">
 <!--table
