--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -913,7 +913,7 @@ DIV будут заменены.-->
 
 <div id="Лист Microsoft Office Excel_1203" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=532 style='border-collapse:
+<table background="#000000" border=0 cellpadding=0 cellspacing=0 width=532 style='border-collapse:
  collapse;table-layout:fixed;width:400pt'>
  <col width=50 style='mso-width-source:userset;mso-width-alt:1828;width:38pt'>
  <col width=354 style='mso-width-source:userset;mso-width-alt:12946;width:266pt'>
