--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -15,8 +15,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <link rel=File-List href="izhnut-candy.files/filelist.xml">
 <style id="Лист Microsoft Office Excel_1203_Styles">
 <!--table
+	bgcolor="#00FF00"
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
+	
+	
 .xl151203
 	{padding-top:1px;
 	padding-right:1px;
@@ -908,7 +911,7 @@ DIV будут заменены.-->
 
 <div id="Лист Microsoft Office Excel_1203" align=center x:publishsource="Excel">
 
-<table background="#333333" border=0 cellpadding=0 cellspacing=0 width=532 style='border-collapse:
+<table border=0 cellpadding=0 cellspacing=0 width=532 style='border-collapse:
  collapse;table-layout:fixed;width:400pt'>
  <col width=50 style='mso-width-source:userset;mso-width-alt:1828;width:38pt'>
  <col width=354 style='mso-width-source:userset;mso-width-alt:12946;width:266pt'>
