--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -3,8 +3,12 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-
-	
+<title>background-color</title>
+  <style>
+   table{
+    background-color: #3366CC; /* Цвет фона веб-страницы */
+   } 
+</style>	
 <meta http-equiv=Content-Type content="text/html; charset=windows-1251">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 12">
@@ -15,7 +19,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <link rel=File-List href="izhnut-candy.files/filelist.xml">
 <style id="Лист Microsoft Office Excel_1203_Styles">
 <!--table
-	bgcolor="#00FF00"
+	
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 	
