--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -5,6 +5,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <head>
 <title>background-color</title>
   <style>
+	body{
+	 background-color: #444444; }
    table{
     background-color: #3366CC; /* Цвет фона веб-страницы */
    } 
