--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -9,6 +9,12 @@ xmlns="http://www.w3.org/TR/REC-html40">
    {  
     padding-right: 5px; /* Поле справа */
        }
+	  
+	 
+   .fig {
+    text-align: center; /* Выравнивание по центру */ 
+   }
+  
   </style>
 	
 <meta http-equiv=Content-Type content="text/html; charset=windows-1251">
@@ -1133,9 +1139,7 @@ DIV будут заменены.-->
 
 </div>
 	
-<div>	
- <img src="cake.jpg" alt="animat" /><br><br>
-</div>
+<p class="fig"> <img src="shokandy.png" alt="animat" width="100%"  ></p>
 <!----------------------------->
 <!--КОНЕЦ ФРАГМЕНТА ПУБЛИКАЦИИ МАСТЕРА ВЕБ-СТРАНИЦ EXCEL-->
 <!----------------------------->
