--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -4,18 +4,23 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 	
- <title>padding-right</title>
-  <style>
-   {  
-    padding-right: 5px; /* Поле справа */
-       }
-	  
-	 
+ <title>center</title>
+   
    .fig {
     text-align: center; /* Выравнивание по центру */ 
    }
   
   </style>
+	
+	<title>margin-right</title>
+  <style>
+   body { 
+    margin-right: 5dp; /* Отступ справа */
+   
+   }
+  </style>
+	
+	
 	
 <meta http-equiv=Content-Type content="text/html; charset=windows-1251">
 <meta name=ProgId content=Excel.Sheet>
@@ -1139,7 +1144,7 @@ DIV будут заменены.-->
 
 </div>
 	
-<p class="fig"> <img src="shokandy.png" alt="animat" width="100%"  ></p>
+<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%"  ></p>
 <!----------------------------->
 <!--КОНЕЦ ФРАГМЕНТА ПУБЛИКАЦИИ МАСТЕРА ВЕБ-СТРАНИЦ EXCEL-->
 <!----------------------------->
