--- a/izhnut-ves.html
+++ b/izhnut-ves.html
@@ -3,6 +3,15 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+	<meta http-equiv=Content-Type content="text/html; charset=windows-1251">
+<meta name=ProgId content=Excel.Sheet>
+<meta name=Generator content="Microsoft Excel 12">
+	<meta name="HandheldFriendly" content="true" />
+<meta name="viewport"
+          content="width=device-width,
+                 height=device-height, user-scalable=no" />
+	
+	
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 12">
