--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -1137,7 +1137,7 @@ DIV будут заменены.-->
 
 </div>
 	
-<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%"  ></p>
+<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%" align="center"  ></p>
 <!----------------------------->
 <!--КОНЕЦ ФРАГМЕНТА ПУБЛИКАЦИИ МАСТЕРА ВЕБ-СТРАНИЦ EXCEL-->
 <!----------------------------->
