--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -9,7 +9,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
   <style>
    body { 
     margin-right: 5dp; /* Отступ справа */
-   
+   padding-right: 5px;
    }
   </style>
 	
@@ -1134,10 +1134,10 @@ DIV будут заменены.-->
  </tr>
  <![endif]>
 </table>
-
+<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%" align=center  ></p>
 </div>
 	
-<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%" align="center"  ></p>
+
 <!----------------------------->
 <!--КОНЕЦ ФРАГМЕНТА ПУБЛИКАЦИИ МАСТЕРА ВЕБ-СТРАНИЦ EXCEL-->
 <!----------------------------->
