--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -1134,7 +1134,7 @@ DIV будут заменены.-->
  </tr>
  <![endif]>
 </table>
-<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%" align="center"  ></p>
+<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%" style="magin:auto;"  ></p>
 </div>
 	
 
