--- a/izhnut-ves.html
+++ b/izhnut-ves.html
@@ -6,6 +6,12 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 12">
+	
+	<meta name="HandheldFriendly" content="true" />
+<meta name="viewport"
+          content="width=device-width,
+                 height=device-height, user-scalable=no" />
+	
 <link rel=File-List href="ves3.files/filelist.xml">
 <style id="ves2_16277_Styles">
 <!--table
