--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -28,7 +28,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
-	
+.fig 
+	{text-align: center;}
 	
 .xl151203
 	{padding-top:1px;
@@ -1134,7 +1135,7 @@ DIV будут заменены.-->
  </tr>
  <![endif]>
 </table>
-<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%" style="magin:auto;"  ></p>
+<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%"></p>
 </div>
 	
 
