--- a/izhnut-hold.html
+++ b/izhnut-hold.html
@@ -1,6 +1,10 @@
 <html>
 
     <meta charset="utf-8">
+    <meta name="HandheldFriendly" content="true" />
+<meta name="viewport"
+          content="width=device-width,
+                 height=device-height, user-scalable=no" />
 
 
 
