--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -5,10 +5,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <head>
 	
  	
-	<title>margin-right</title>
+	
   <style>
-   .fig 
-	{text-align: center;}
+   .center-img {
+  text-align: center;
+}
   </style>
 	
 	
@@ -27,6 +28,10 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 
+	
+.center-img {
+  text-align: center;
+}	
 	
 .xl151203
 	{padding-top:1px;
@@ -1132,7 +1137,12 @@ DIV будут заменены.-->
  </tr>
  <![endif]>
 </table>
-<p class="fig"> <img src="shokcandy.png" alt="animat" width="100%"></p>
+	
+<p class="center-img">
+ <img src="shokcandy.png" alt="animat"  >
+</p>
+	
+
 </div>
 	
 
