--- a/izhnut-candy.html
+++ b/izhnut-candy.html
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
  	
 	
   <style>
-   .center-img {
+   figure {
   text-align: center;
 }
   </style>
@@ -29,9 +29,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-displayed-thousand-separator:" ";}
 
 	
-.center-img {
+
+   figure {
   text-align: center;
-}	
+}
+
 	
 .xl151203
 	{padding-top:1px;
@@ -1138,9 +1140,16 @@ DIV будут заменены.-->
  <![endif]>
 </table>
 	
-<p class="center-img">
- <img src="shokcandy.png" alt="animat"  >
-</p>
+<style>
+   figure {
+  text-align: center;
+}
+  </style>
+	
+	<figure>
+  <img src="shokcandy.png" alt="animat"  >
+  <figcaption></figcaption>
+</figure>
 	
 
 </div>
